# openmc-dagmc-wrapper

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  LICENSE.txt  README.md  conda_build.sh  conda_build_config.yaml  environment.yml  pyproject.toml  readthedocs.yml  requirements-test.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: anaconda-publish.yml  autopep8.yml  ci_with_docker_build.yml  ci_with_install.yml  ci_with_install.yml.yml  docker_publish.yml  docker_publish_dev.yml  docker_publish_release.yml  python-publish.yml
conda/: meta.yaml
docs/source/: cell_tallies.rst  cell_tally.rst  conf.py  example_neutronics_simulations.rst  fusion_settings.rst  geometry.rst  index.rst  (+14 more)
examples/: ball_reactor.ipynb  ball_reactor_minimal.ipynb  ball_reactor_source_plot.ipynb  cell_tally_example.ipynb  cell_tally_example.py  center_column_study_reactor.ipynb  center_column_study_reactor_minimal.ipynb  component_based_mesh_simulation.py  component_based_parameter_study.ipynb  dagmc_logo.ipynb  heating_on_unstructured_mesh_shape.py  make_torus.py  openmc_logo_example.ipynb  regular_2d_mesh_tally_example.py  regular_3d_mesh_tally_example.py  segmented_blanket_ball_reactor.py  shape_with_gas_production.py  shape_with_spectra_cell_tally.py  submersion_reactor.ipynb  submersion_reactor_minimal.py  text_example.ipynb
install_scripts/: ubuntu-20.04-install.sh
openmc_dagmc_wrapper/: Geometry.py  Materials.py  Model.py  Settings.py  Tally.py  __init__.py  example.py  mesh.py  model.py  neutronics_model.py  neutronics_utils.py  utils.py
paramak_neutronics/: __init__.py  neutronics_model.py  neutronics_utils.py
src/: core.py
tests/: notebook_testing.py  test_NeutronicModel.py  test_Shape_neutronics.py  test_example_neutronics_simulations.py  test_geometry.py  test_materials.py  test_neutronics_model.py  test_neutronics_model_cubit.py  test_neutronics_model_pymoab.py  test_neutronics_utils.py  test_reactor_neutronics.py  test_settings.py  test_shape_neutronics.py  test_system.py
(+22 files in other folders)
