[metadata]
name = openmc_dagmc_wrapper
author = The openmc-dagmc-wrapper Development Team
author_email = mail@jshimwell.com
description = A Python package that extends OpenMC base classes to provide convenience features and standardized tallies when simulating DAGMC geometry with OpenMC. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/openmc-dagmc-wrapper
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/openmc-dagmc-wrapper
    Tracker = https://github.com/fusion-energy/openmc-dagmc-wrapper/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    neutronics_material_maker
    dagmc_h5m_file_inspector
    dagmc_bounding_box


[options.extras_require]
tests = 
    pytest >= 5.4.3
    openmc_data_downloader
    # remove_dagmc_tags
    # defusedxml

[flake8]
per-file-ignores = __init__.py:F401
